Microservice Database Refactoring Completed..

--- a/Services/ExamService/ExamService.API/appsettings.Development.json
+++ b/Services/ExamService/ExamService.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ExamServiceConnection": "Server=(localdb)\\mssqllocaldb;Database=ExamServiceDb_Dev;Trusted_Connection=true;TrustServerCertificate=true;"
+    "ExamServiceConnection": "Server=ABHIJEET;Database=RankUp_ExamDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
