--- a/Services/UserService/UserService.API/appsettings.json
+++ b/Services/UserService/UserService.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ABHIJEET;Database=RankUpDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "UserServiceConnection": "Server=ABHIJEET;Database=RankUp_UserDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "your-256-bit-secret-key-must-be-at-least-32-characters-long",
