--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,33 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ABHIJEET;Database=RankUpDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=ABHIJEET;Database=RankUpDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "AdminServiceConnection": "Server=ABHIJEET;Database=RankUp_AdminDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "UserServiceConnection": "Server=ABHIJEET;Database=RankUp_UserDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "ExamServiceConnection": "Server=ABHIJEET;Database=RankUp_ExamDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "QuestionServiceConnection": "Server=ABHIJEET;Database=RankUp_QuestionDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "QuizServiceConnection": "Server=ABHIJEET;Database=RankUp_QuizDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "SubscriptionServiceConnection": "Server=ABHIJEET;Database=RankUp_SubscriptionDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "PaymentServiceConnection": "Server=ABHIJEET;Database=RankUp_PaymentDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Services": {
+    "UserService": {
+      "BaseUrl": "https://localhost:5002"
+    },
+    "ExamService": {
+      "BaseUrl": "https://localhost:5003"
+    },
+    "QuestionService": {
+      "BaseUrl": "https://localhost:5004"
+    },
+    "QuizService": {
+      "BaseUrl": "https://localhost:5005"
+    },
+    "SubscriptionService": {
+      "BaseUrl": "https://localhost:5006"
+    },
+    "PaymentService": {
+      "BaseUrl": "https://localhost:5007"
+    }
   },
   "Logging": {
     "LogLevel": {
