--- a/Services/AdminService/AdminService.API/appsettings.json
+++ b/Services/AdminService/AdminService.API/appsettings.json
@@ -44,7 +44,7 @@
       "BaseUrl": "http://localhost:5009"
     },
     "QualificationService": {
-      "BaseUrl": "https://192.168.1.9:5010"
+      "BaseUrl": "http://192.168.1.9:5011"
     }
   }
 }
