--- a/appsettings.json
+++ b/appsettings.json
@@ -7,29 +7,33 @@
     "QuestionServiceConnection": "Server=ABHIJEET;Database=RankUp_QuestionDB;Trusted_Connection=True;TrustServerCertificate=True;",
     "QuizServiceConnection": "Server=ABHIJEET;Database=RankUp_QuizDB;Trusted_Connection=True;TrustServerCertificate=True;",
     "SubscriptionServiceConnection": "Server=ABHIJEET;Database=RankUp_SubscriptionDB;Trusted_Connection=True;TrustServerCertificate=True;",
-    "PaymentServiceConnection": "Server=ABHIJEET;Database=RankUp_PaymentDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "PaymentServiceConnection": "Server=ABHIJEET;Database=RankUp_PaymentDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "QualificationServiceConnection": "Server=ABHIJEET;Database=RankUp_QualificationDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Services": {
     "AdminService": {
-      "BaseUrl": "http://192.168.1.9:56923"
+      "BaseUrl": "http://192.168.1.1:56923"
     },
     "UserService": {
-      "BaseUrl": "http://192.168.1.9:5002"
+      "BaseUrl": "http://192.168.1.1:5002"
     },
     "ExamService": {
-      "BaseUrl": "http://192.168.1.9:5000"
+      "BaseUrl": "http://192.168.1.1:5000"
     },
     "QuestionService": {
-      "BaseUrl": "http://192.168.1.9:56916"
+      "BaseUrl": "http://192.168.1.1:56916"
     },
     "QuizService": {
-      "BaseUrl": "http://192.168.1.9:56918"
+      "BaseUrl": "http://192.168.1.1:56918"
     },
     "SubscriptionService": {
-      "BaseUrl": "http://192.168.1.9:56925"
+      "BaseUrl": "http://192.168.1.1:56925"
     },
     "PaymentService": {
-      "BaseUrl": "http://192.168.1.9:56915"
+      "BaseUrl": "http://192.168.1.1:56915"
+    },
+    "QualificationService": {
+      "BaseUrl": "http://192.168.1.1:5011"
     }
   },
   "Logging": {
